[package]
name = "connpass-notifier"
version = "0.1.0"
authors = ["i2tsuki <mac-daisuki@live.jp>"]
edition = "2018"

[dependencies]
mailparse = "0.10.1"
imap = "1.0.2"
native-tls = "0.2.3"
regex = "1.3.1"
chrono = "0.4.10"
time = "0.1.42"
headless_chrome = "0.9.0"
failure = "0.1.6"
serde_yaml = "0.8.11"
serde = "1.0.104"
